<resources>
    <string name="app_name">Timesheet</string>
    <string name="welcome">Welcome to the Frequency Time Sheet App</string>
    <string name="welcome_description">The Frequency time sheet app allows you to log your time digitally at one place,
        where all your information is secure. No more manual keying in or messy papers.
    </string>
    <string name="get_started">Get Started</string>
    <string name="logo_description">This is the logo</string>
    <string name="graphic_description">We have a graphic here,to show welcome</string>
    <string name="copyright_text">© Frequency 2018</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_prompt">Please enter your phone number. Remember that you must be already authorised by
        your employer to use this application
    </string>
    <string name="next">Next</string>
    <string name="project">Project</string>
    <string name="sample_project_name">33 ASQUITH AVENUE, HOUSING NEW ZEALAND</string>
    <string name="contractor">Contractor</string>
    <string name="sample_contractor">BUILD PARTNERS</string>
    <string name="jobs_assigned">Jobs Assigned</string>
    <string name="plumbing">Plumbing</string>
    <string name="plumbing_description">Do some plumbing work on the 8th floor</string>
    <string name="electrician">Electrician</string>
    <string name="electrician_description">Do some electrician work on the 5th Floor</string>
    <string name="details_activity_prompt">Hello there, just make sure that these details are correct. A verification
        code will be sent to your registered phone number
    </string>
    <string name="send_verification_sms">Send Verification SMS</string>
    <string name="details">Details</string>
    <string name="current_job">Current Job</string>
    <string name="job_selection">Job Selection</string>
    <string name="job_selection_description">You have been assigned to more than one job in this project. Please select
        the job you\'re working on right now.
    </string>

    <string name="choose_job_prompt">Select a job</string>

    <string-array name="job_array">
        <item>8th Floor Plumbing</item>
        <item>2nd Floor Cleaning</item>
        <item>25th Floor Cleaning</item>
        <item>30th Floor Cleaning</item>
        <item>80th Floor Roofing</item>
        <item>12th Floor Plumbing</item>
        <item>29th Floor Dancing</item>
        <item>17th Floor Playing</item>
        <item>17th Floor Being Busy</item>
    </string-array>

    <string name="time_sheet">Time Sheet</string>
    <string name="title_activity_clock_in_maps">Map</string>
    <string name="clock_in_prompt">Please note that as soon as you clock in, your location will be monitored until you
        clock out. We will stop monitoring your location as soon as you clock out.
    </string>
    <string name="clock_in">Clock In</string>
    <string name="start_break">Start Break</string>
    <string name="end_break">End Break</string>
    <string name="clock_out">Clock Out</string>
    <string name="current_time_text">Current Time</string>
    <string name="time_log">Time Log</string>
    <string name="health_and_safety">Health and Safety</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum dictum
        arcu. Nunc accumsan molestie ante vitae lobortis. Nullam quis orci neque. Curabitur facilisis pulvinar lectus id
        scelerisque. Sed tincidunt velit placerat nisl lacinia, tempus mollis metus fermentum. Aenean sagittis molestie
        lorem, vitae faucibus sem ornare at. Donec tincidunt, diam in varius interdum, nibh ipsum luctus odio, nec
        commodo ligula tortor consectetur est. Nullam nisi diam, ullamcorper a libero at, luctus luctus enim. Aenean sed
        lectus lorem. Maecenas nec dui volutpat, luctus mi quis, ultrices lacus. Maecenas velit mi, placerat vitae odio
        a, faucibus consequat purus.
    </string>
    <string name="history_of_jobs">History of Jobs</string>
    <string name="recycler_view_text"> Recycler View Text</string>
    <string name="sample_time">Time Clocked In : 12:54:49</string>
    <string name="time_stuff">00:00:47</string>



</resources>
