<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detailsActivity">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/firstLinearLayout"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:text="@string/project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/black"
                android:id="@+id/textView6"/>
        <TextView
                android:text="@string/sample_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:id="@+id/textView7"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/secondLinearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/firstLinearLayout">


        <TextView
                android:text="@string/contractor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/black"
                android:id="@+id/textView8"/>
        <TextView
                android:text="@string/sample_contractor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:id="@+id/textView9"/>
    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/thirdLinearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/secondLinearLayout">


        <TextView
                android:text="@string/jobs_assigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/black"
                android:id="@+id/textView10"/>
        <TextView
                android:text="@string/plumbing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:id="@+id/textView11"
                android:layout_marginStart="18dp"/>

        <TextView
                android:text="@string/plumbing_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:id="@+id/textView12"
                android:layout_marginStart="18dp"/>


        <TextView
                android:text="@string/electrician"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:id="@+id/textView13"
                android:layout_marginStart="18dp"/>

        <TextView
                android:text="@string/electrician_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:id="@+id/textView14"
                android:layout_marginStart="18dp"/>

    </LinearLayout>
    <TextView
            android:text="@string/details_activity_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:gravity="center"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/thirdLinearLayout"/>
    <Button
            android:text="@string/send_verification_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:background="@color/colorPrimary"
            android:elevation="20dp"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.498"/>


</android.support.constraint.ConstraintLayout>