<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/frequency_logo"
            android:id="@+id/imageView" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/logo_description"
            app:layout_constraintHorizontal_bias="0.45"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/welcome_graphic"
            android:id="@+id/imageView2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/graphic_description"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/welcome"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="20sp"
            android:fontFamily="@font/open_sans_bold"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:text="@string/welcome_description"
            android:layout_width="0dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="12sp"
            android:fontFamily="@font/open_sans_light"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/get_started"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="16sp"
            android:fontFamily="@font/open_sans_bold"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/copyright_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/white"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="12sp"
            android:fontFamily="@font/open_sans_light"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>