<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentJobActivity">

    <TextView
            android:text="@string/job_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/job_selection_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_light"
            android:id="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16"/>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/baseline_navigate_next_white_36dp"
            android:id="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/choose_job_prompt"
            android:entries="@array/job_array"
            android:id="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>