<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PhoneNumberActivity">

    <TextView
            android:text="@string/phone_number_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_regular"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/etText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textSize="16sp"
                android:inputType="phone"
                android:gravity="center"/>

    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.498"
            android:elevation="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>


</android.support.constraint.ConstraintLayout>